src/lmcc/public/css/left.css
#task_panel {
	flex-direction: row;
	/* position: fixed; */
	/* top: 0%; */
	right: 0%;
	height: 100%;
	width: 30%;
	top: 0%;
	background-image: linear-gradient(to left,#33426b, #202663);
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	aspect-ratio: 5/1;
}

#task_description_panel {
	height: 35%;
	padding: 5% 5%;
	background-image: radial-gradient(#737f9d, #5e6394);
	border: 0.2vh solid #454b8f;
	margin-top: 5%;
	width: 85%;
	border-radius: 10px;

}

#task_confirmation_panel {
    height: 5%;
    padding: 5% 5%;
    background-image: radial-gradient(#737f9d, #5e6394);
    border: 0.2vh solid #454b8f;
    width: 85%;
    border-radius: 10px;
}

#task_description {
	font-family: Source Code Pro;
	color: white;

}

#evatitle {
	width: 100%;
	height: 3%;
}
#evatitle_container {
	text-align: center;
}


#task_category_panel {
	display: flex;
	flex-direction: column;
	background-image: radial-gradient(#33426b, #161c56);
	border: 0.2vh solid #454b8f;
	padding-left: 5%;
	padding-right: 5%;
    text-align: center;
	position: relative;
	width: 35%;
	/* margin-top: 5%; */
	margin-bottom: 5%;
	justify-content: center;
	border-radius: 10px;


}

#task_label {
	color: white;
	margin: 5%;
}




#subtask_panel {
	display: flex;
	flex-direction: column;
	justify-content: center;
	background-image: radial-gradient(#33426b, #161c56);
	border: 0.2vh solid #454b8f;
	padding-left: 5%;
	padding-right: 5%;
	width: 30%;
	/* margin-top: 5%; */
	margin-bottom: 5%;
	margin-left: 5%;
	border-radius: 10px;
    text-align: center;
}

#subtask_label{
	color: white;
	margin: 5%;

}

#send_task{
	width: 80%;
	margin-bottom: 5%;
    border: 2px solid #88c;
    border-radius: 4px;
    background-color: #669;
    color: #eee;
    font-size: 2vh;
}


#panel_mission_monitor {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	top: 0%;
	left: 0%;
	height: 60%;
	width: 70%;
	padding: 0px;
	aspect-ratio: 400 / 158;
	/* background-color: #88c; */
	background-image: linear-gradient(to bottom right,#33426b, #161c56);
	border-radius: 10px;
	/* border: 0.2vh solid rgb(41, 225, 249); */

}

#missiontitle {
	width: 100%;
	height: 25px;
}
#inner_mission_panel {
	display: flex;
	flex-direction: row;
	/* justify-content: left; */
	
	/* border: 0.2vh solid rgb(41, 225, 249); */
	height: 95%;
	width: 100%;

}

#eva_container {
	display: flex;
    justify-content: center;
    align-items: center; 
	aspect-ratio: 5 / 1;
	width: 75%;
	padding-top: 1%;
	height: 95%;
	/* left: 0%; */
	/* border: 0.3vh solid rgb(176, 158, 255); */

}

.eva_panel {
	position: relative;
	height: 100%;
	padding: 1% 1%;
	background-image: radial-gradient(#737f9d, #5e6394);
	border: 0.2vh solid #454b8f;
	width: 100%;
	display: inline-block; /* Display the panels inline */
	border-radius: 10px;
	overflow: scroll;
}

#eva {
	font-family: Source Code Pro;
	color: white;
}

#error_container {
	display: flex;
    justify-content: center;
    align-items: center; 
	aspect-ratio: 5 / 1;
	width: 25%;
	padding-top: 1%;
	/* left: 0%; */
	/* border: 0.3vh solid rgb(176, 158, 255); */

}

.error_panel {
	position: relative;
	height: 100%;
	padding: 1% 1%;
	background-image: radial-gradient(#737f9d, #5e6394);
	border: 0.2vh solid #454b8f;
	width: 100%;
	display: inline-block; /* Display the panels inline */
	border-radius: 10px;
	overflow: scroll;
}

.green-text {
    color: rgb(82, 242, 42);
}

.yellow-text {
    color: rgb(238, 255, 49);
}

.red-text {
    color: rgb(120, 44, 44);
	/* text-shadow: white 0px 0px 0px; */
	font-weight: bold;
}


#helpBtn {
    position: absolute;
    top: 5px;
    right: 10px;
    width: 30px;
    height: 30px;
    font-size: 18px;
    border: none;
    background-color: #f1f1f1cb;
	color: black;
    border-radius: 50%;
    cursor: pointer;
    z-index: 10;
	text-align: center;  
	line-height: 10px;  /* Same as the height to center text vertically */


}

.select-dropdown {
  /* min-width: 50%; */
  width: 100%;
}

.column_telemetry {
	float: left;
	width: 65%;
}


.column_value {
	float: left;
	width: 35%;
}

select {
  appearance: none;
  /* safari */
  -webkit-appearance: none;
  /* other styles for aesthetics */
  width: 100%;
  font-size: 1.5vh;
  padding: 0.675em 1em; /* Reduce the right padding */
  background-color: #88a;
  border: 1px solid #aad;
  border-radius: 0.25rem;
  color: #000;
  cursor: pointer;
}

#panel_geo_sampling {
	bottom: 0%;
	left: 0%;
	height: 40%;
	width: 70%;
	aspect-ratio: 400 / 158;
	/* background-color: #88c; */
	background-image: linear-gradient(to top right ,#33426b, #161c56);

}

